<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.doggyland.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/p1"
        android:scaleType="centerCrop"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text1"
        android:textSize="@dimen/headline"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange6"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text2"
        android:textSize="@dimen/title"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text3"
        android:textSize="@dimen/title"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange4"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text4"
        android:textSize="@dimen/title"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text5"
        android:textSize="@dimen/title"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@color/orange2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text6"
        android:textSize="@dimen/title"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:textStyle="italic"
        android:background="@color/orange1"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/p2"
        android:scaleType="centerCrop"
        />

</LinearLayout>
    </ScrollView>